examples/test/testpolicy14198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14198
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key30: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value2
          key17: value34
          key45: value28
      podSelector:
        matchLabels:
          key12: value38
          key42: value3
